[package]
name = "fractal-weight-engine"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.16"
wgpu = "0.20"
pollster = "0.3"
nalgebra = "0.32"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hot-lib-reload = "0.4"
notify = "6.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 2